--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "exceljs": "^4.4.0",
     "fs": "^0.0.1-security",
+    "mongodb": "^6.3.0",
     "telegraf": "^4.16.3"
   }
 }
