--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node bot.js",
     "setup": "node scripts/setup-env.js",
     "setup-menu": "node scripts/setup-bot-menu.js",
+    "migrate-candidates": "node scripts/migrate-candidates.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
